# panel-dashboard-app-template

./: README.md  app.py  numerous.toml  pyproject.toml
